--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>WORKING FILE Hong Kong</title>
   <!––required in order to read chinese characters in image filenames--!>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 	<!––maybe find these files and host locally--!>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css"
