--- a/HKTT/top_10_images.html
+++ b/HKTT/top_10_images.html
@@ -7,6 +7,9 @@
 	<!––maybe find these files and host locally--!>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.1/jquery.min.js"></script> 
+	
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <style>
 
 
