Fixes and adding CH version base

--- a/MCC/MCC_main.html
+++ b/MCC/MCC_main.html
@@ -307,7 +307,7 @@ color: var(--color-b-light);
     <span class="close">&times;</span>
 	<h1>How does this work?</h1>
 	<h2>The short version</h2>
-<p>First we find the geographical centre of each country. Since some countries include islands and territories that are a long way from their main landmass, these were excluded to make the centre more meaningful. We then measure the distance between the capital city and that centre.</p>
+<p>First we find the geographical centre of each country. Since some countries include islands and territories that are a long way from their main landmass, these were excluded to make the centre more meaningful. Disputed areas are also mostly excluded. We then measure the distance between the capital city and that centre.</p>
 
 <p>We can't just compare those distances, as that would just make small countries come out on top. Instead we take the area of the country landmass, and divide the distance by that. Well, actually we divide it by the square root of the area, due to maths.</p>
 
