--- a/index.html
+++ b/index.html
@@ -223,9 +223,9 @@ background: none;
   <div class="filterDiv map history">
   <img src="files/thumbs/thumb_HKTT.jpg">
   <h5 class="h5">Hong Kong Through Time</h5>
-	  <p>Over 1000 then-and-now images of Hong Kong, taken by Flickr user HK Man and displayed here on a webmap. Completed partly in the hope of identifying the mysterious HK Man. Labelled and geocoded with Python, displayed with Leaflet.</p>
+	  <p>Over 1000 then-and-now images of Hong Kong, taken by Flickr user HK Man and displayed here on a webmap. Completed partly in the hope of identifying the mysterious HK Man. Labelled and geocoded with Python, displayed with Leaflet. Chinese language version in progress.</p>
 	  <small class="notes">Leaflet, Python, HTML/CSS/JS</small>
-	  	  <a href="HKTT/HKTT_main.html"><span class="link-box"></span></a>
+	  	  <a href="HKTT/en/HKTT_main.html"><span class="link-box"></span></a>
       </div>
   <div class="filterDiv map prog">
   <img src="files/thumbs/thumb_MCC.jpg">
