--- a/HKTT/ch/HKTT_main.html
+++ b/HKTT/ch/HKTT_main.html
@@ -15,6 +15,7 @@
    crossorigin=""></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.1/jquery.min.js"></script> 
   <link rel="stylesheet" href="../files/main_stylesheet.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
  
   
