--- a/HKTT/ch/Who_is_HK_Man.html
+++ b/HKTT/ch/Who_is_HK_Man.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.1/jquery.min.js"></script> 
   <link rel="stylesheet" href="../files/main_stylesheet.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
 
 
