Adding land cover analysis

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet"> 
 	
-    <title>williamlow.xyz</title>
+    <title>William Low</title>
 	
 <style>
 
@@ -212,7 +212,7 @@ background: none;
   <div class="container-fluid">     
    <div id="myBtnContainer">
   <button class="btn active" onclick="filterSelection('all')"> Show all</button>
-  <button class="btn" onclick="filterSelection('map')"> Maps</button>
+  <button class="btn" onclick="filterSelection('map')"> Maps & GIS</button>
   <button class="btn" onclick="filterSelection('hist')"> History</button>
   <button class="btn" onclick="filterSelection('photo')"> Photography</button>
   <button class="btn" onclick="filterSelection('prog')"> Programming & web design</button>
@@ -240,6 +240,13 @@ background: none;
 	  <p>A small application built in Shiny to allow residents of England to see if planned changes to political boundaries will affect them.</p>
 	  <small class="notes">R, Shiny</small>
 	  	  <a href="https://william-low.shinyapps.io/English-boundary-change-postcode-check-tool/"><span class="link-box"></span></a>
+  </div>
+  <div class="filterDiv map">
+  <img src="LCA/files/3_categorised_land_cover_raster.jpg">
+  <h5 class="h5">Assessing land cover impact through remote sensing</h5>
+	  <p>Using QGIS and remote sensing data to assess the impact of a proposed hydropower project on land cover.</p>
+	  <small class="notes">QGIS, SCP plugin, satellite imagery</small>
+	  	  <a href="LCA/land-cover-analysis.html"><span class="link-box"></span></a>
   </div>
   <div class="filterDiv photo hist">
   <img src="files/thumbs/thumb_YTM.jpg">
