Small edits to LCA

--- a/LCA/land-cover-analysis.html
+++ b/LCA/land-cover-analysis.html
@@ -80,7 +80,7 @@ margin-top: 60px;
   </div>
 
 
-<p>The SCP plugin must be trained to recognize the spectral characteristics of different land cover types – this involves selected areas where the land cover type is known, and registering them as reference points for the analysis.</p>
+<p>The SCP plugin must be trained to recognize the spectral characteristics of different land cover types – this involves selecting areas where the land cover type is known, and registering them as reference points for the analysis.</p>
 <p>Five categories were used for this analysis: cleared ground, low density vegetation, high density vegetation (forest), riverbank and water. The detection of villages and minor outbuildings is challenging in this region due to very low urban density, broad spectral ranges due to materials used, and the fact that buildings are usually closely interspersed with low and high density vegetation. Buildings in this analysis mainly contribute to the cleared ground category.</p>
 <p>The land cover of the entire area is then classified according to these reference values. This raster file is then clipped according to the four different scenarios.</p>
 
@@ -104,6 +104,7 @@ margin-top: 60px;
 <p>These individual rasters can then be analysed to determine the type and amount of land cover types that would be affected by the increased water level. The results were as follows:</p>
 
 <table class="table table-sm table-striped">
+<caption class=" text-center">Amount of each land cover type affected, in km<sup>2</sup></caption>
   <thead>
     <tr>
       <th scope="col"></th>
