--- a/index.html
+++ b/index.html
@@ -62,9 +62,10 @@ margin-bottom: 25px;
 .btn {
   border: none;
   outline: none;
-  padding: 8px 13px;
+  padding: 6px 13px;
   background-color: #f1f1f1;
   cursor: pointer;
+  margin: 2px 0;
 }
 
 .btn:hover {
