--- a/MCC/MCC_main.html
+++ b/MCC/MCC_main.html
@@ -318,7 +318,7 @@ color: var(--color-b-light);
 
 <h2>The long version</h2>
 
-<p>All calculations done were based on an edited version of the most detailed world polygon file I could find: the US State Department's <a href="http://geonode.state.gov/layers/geonode%3AGlobal_LSIB_Polygons_Detailed" target="_blank">Global LSIB</a>. The LSIB generally places geographically distinct autonomous or dependent regions in separate polygon groups to those of their associated country - so many of these regions have not been included in calculations. An example of this is the Isle of Man, a British dependency between England and Northern Island.</p>
+<p>All calculations done were based on an edited version of the most detailed world polygon file I could find: the US State Department's <a href="http://geonode.state.gov/layers/geonode%3AGlobal_LSIB_Polygons_Detailed" target="_blank">Global LSIB</a>. The LSIB generally places geographically distinct autonomous or dependent regions in separate polygon groups to those of their associated country - so many of these regions have not been included in calculations. An example of this is the Isle of Man, a British dependency between England and Northern Ireland.</p>
 
 <p>I used <a href="https://www.naturalearthdata.com/" target="_blank">Natural Earth</a> data for cities, also with a few edits here and there. It would be more robust to use polygons covering the extent of the city, but this data is not available with global coverage. The modern '<a href="https://en.wikipedia.org/wiki/City-state" target="_blank">city states</a>' of Monaco, Singapore, Vatican City were removed; there was no way to measure their centrality given their entire landmass is one city.</p>
 
