--- a/index.html
+++ b/index.html
@@ -223,8 +223,8 @@ background: none;
 <div class="container-fluid">
 	<div class="filterDiv map history">
   <img src="files/thumbs/thumb_Booth.jpg">
-  <h5 class="h5">Predicting modern affluence patterns with Victorian poverty maps</h5>
-	  <p>An investigation into the relationship between the Booth poverty maps of London and modern patterns of affluence. Covers vectorisation, spatial analysis, spatial regression for predictive analysis.</p>
+  <h5 class="h5">Predicting modern patterns of wealth with historical poverty data</h5>
+	  <p>An investigation into the relationship between the Booth poverty maps and modern patterns of affluence. Includes vectorisation, spatial analysis, and spatial regression for predictive analysis.</p>
 	  <small class="notes">QGIS, R, GeoDa</small>
 	  	  <a href="Booth_poverty/booth-poverty-modern-patterns.html"><span class="link-box"></span></a>
       </div>
