--- a/Booth_poverty/booth-poverty-modern-patterns.html
+++ b/Booth_poverty/booth-poverty-modern-patterns.html
@@ -29,7 +29,13 @@ max-width: 100%;
 
 .main-window {
 margin-top: 60px;
+width: 100%;
+}
+
+@media only screen and (min-width: 768px) {
+	.main-window {
 width: 65%;
+}
 }
 
 @media only screen and (max-width: 600px) {
