--- a/Booth_poverty/booth-poverty-modern-patterns.html
+++ b/Booth_poverty/booth-poverty-modern-patterns.html
@@ -62,7 +62,7 @@ h5 {
 <div class="container main-window">
 <h3>Predicting modern patterns of affluence through vectorisation and spatial regression of Charles Booth’s poverty maps</h3>
 <br>
-<p>This is a relatively brief account of the final project I completed for my MSc at UCL, the full paper of which (with references) is available <a href="Charles Booth’s poverty maps and modern patterns of affluence - understanding their relationship through vectorisation and spatial regression.pdf" target="_blank">
+<p>This is a relatively brief account of the final project I completed for my MSc at UCL, the full paper of which (with references) is available <a href="files/Charles Booth’s poverty maps and modern patterns of affluence - understanding their relationship through vectorisation and spatial regression.pdf" target="_blank">
 here</a>. 
 <h4>Charles Booth and his pioneering maps</h4>
 <p>Businessman, politician and social scientist, Charles Booth lived from 1840 to 1916 – a time of growing interest in the plight of the urban poor. Concerned by the extent of poverty and the perceived sensationalism with which it was reported, Booth set out to give it a full and proper accounting.</p>
