--- a/index.html
+++ b/index.html
@@ -213,6 +213,7 @@ background: none;
   <div class="container-fluid">     
    <div id="myBtnContainer">
   <button class="btn active" onclick="filterSelection('all')"> Show all</button>
+   <button class="btn" onclick="filterSelection('data')"> Data</button>
   <button class="btn" onclick="filterSelection('map')"> Maps & GIS</button>
   <button class="btn" onclick="filterSelection('hist')"> History</button>
   <button class="btn" onclick="filterSelection('photo')"> Photography</button>
@@ -221,7 +222,14 @@ background: none;
 </div>
 
 <div class="container-fluid">
-	<div class="filterDiv map history">
+	<div class="filterDiv data map prog">
+  <img src="files/thumbs/thumb_crisis_lang.png">
+  <h5 class="h5">Building better language data for humanitarian responses</h5>
+	  <p>Aan informal write up of a project with UCL and TWB, designing and building language data products for incorporation into humanitarian workflows. Includes user-centered design, and a broad selection of data work.</p>
+	  <small class="notes">R, Python, SQL, QGIS, HXL</small>
+	  	  <a href="crisis_lang_maps/language_data_humanitarian.html"><span class="link-box"></span></a>
+      </div>
+	<div class="filterDiv data map history">
   <img src="files/thumbs/thumb_Booth.jpg">
   <h5 class="h5">Predicting modern patterns of wealth with historical poverty data</h5>
 	  <p>An investigation into the relationship between the Booth poverty maps and modern patterns of affluence. Includes vectorisation, spatial analysis, and spatial regression for predictive analysis.</p>
