--- a/MCC/MCC_main.html
+++ b/MCC/MCC_main.html
@@ -335,7 +335,7 @@ color: var(--color-b-light);
 
 <h2>Finally</h2>
 
-<p>Thanks for visiting. This was just a fun project to practice with leaflet and r. You can find my other work and projects <a href="williamlow.xyz">here</a>.</p>
+<p>Thanks for visiting. This was just a fun project to practice with leaflet and r. You can find my other work and projects <a href="https://williamlow.github.io">here</a>.</p>
 
   </div>
 
