--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ background: none;
 	<div class="filterDiv data map prog">
   <img src="files/thumbs/thumb_crisis_lang.png">
   <h5 class="h5">Building better language data for humanitarian responses</h5>
-	  <p>Aan informal write up of a project with UCL and TWB, designing and building language data products for incorporation into humanitarian workflows. Includes user-centered design, and a broad selection of data work.</p>
+	  <p>An informal write up of a project with UCL and TWB, designing and building language data products for incorporation into humanitarian workflows. Includes user-centered design, and a broad selection of data work.</p>
 	  <small class="notes">R, Python, SQL, QGIS, HXL</small>
 	  	  <a href="crisis_lang_maps/language_data_humanitarian.html"><span class="link-box"></span></a>
       </div>
