--- a/index.html
+++ b/index.html
@@ -222,6 +222,15 @@ background: none;
 </div>
 
 <div class="container-fluid">
+
+	<div class="filterDiv prog">
+  <img src="files/thumbs/thumb_myanRes.jpg">
+  <h5 class="h5">Myanmar Resists</h5>
+	  <p>An interactive map and image gallery celebrating the truly nationwide nature of the protests against the February 2021 coup in Myanmar.</p>
+	  <small class="notes">Raphael JS</small>
+	  	  <a href="linden_residency/Linden_center_artist_residency.html"><span class="link-box"></span></a>
+      </div>
+
 	<div class="filterDiv photo hist prog">
   <img src="files/thumbs/thumb_linden_residency.jpg">
   <h5 class="h5">Linden Centre Artist Residency</h5>
