--- a/linden_residency/Dali_then_now_photos.html
+++ b/linden_residency/Dali_then_now_photos.html
@@ -154,7 +154,7 @@ margin:0px 5px 0px 5px;
 .title-row {
 padding:8px 0 15px 0;
 background-color:#d2c395;
-margin-bottom: 20px;
+margin: 0 0 20px 0;
 }
 
 .missed {
@@ -189,7 +189,7 @@ font-size: 0.9rem;
 <nav class="navbar fixed-top navbar-dark bg-dark mb-3">
     <div class="container-fluid">
 		<div class="row m-auto d-flex">
-			<a href="#"><div class="navbutton"><span>Go back</span></div></a>
+			<a href="Linden_center_artist_residency.html"><div class="navbutton"><span>Go back</span></div></a>
 			<a href="javascript: return false"  onclick="openModal()" style="cursor: pointer;" class="about-tile-inner"><div class="navbutton"><span>About </span></div></a>
 		</div>
 	</div>
@@ -246,7 +246,7 @@ font-size: 0.9rem;
 		<div class="col-sm">
 		<h2>Dali Old Town</h2>
 		<h4>J.Rock, 1922</h4>
-		<p>Beginning with my favourite, I was delighted to get this long distance shot, with the city walls and surrounding hills lined up so cleanly. These images were taken from a temple complex in the hills to the west of Dali.</p>
+		<p>Beginning with my favourite pair of photographs, I was delighted to get this long distance shot, with the city walls and surrounding hills lined up so cleanly. These images were taken from a temple complex in the hills to the west of Dali.</p>
 		<p>These images show the rapid expansion of the town, the persistence of the city walls and rivers, and the build up of urban areas around the lake.</p></div>
 	</div>
 	
