--- a/linden_residency/Linden_center_artist_residency.html
+++ b/linden_residency/Linden_center_artist_residency.html
@@ -180,7 +180,7 @@ width: 100%;
 <div class="container main-window">
   <div class="title row justify-content-center" style="background-color:#841515;color:white;">
 <h1 style="font-family: 'Julius Sans One', sans-serif;">Linden Centre Artist Residency</h1>
-  <h5><img style="vertical-align:bottom;margin-right:5px;" src="https://williamlow.github.io/dali_yunnan_history/images/pin_icon.png" width="20" height="20">Xizhou, Yunnan Province, China</h5>
+  <h5><img style="vertical-align:bottom;margin-right:5px;" src="images/pin_icon.png" width="20" height="20">Xizhou, Yunnan Province, China</h5>
 
 <!-- The Modal -->
 <div id="myModal" class="modal">
@@ -208,12 +208,12 @@ width: 100%;
 	</div>
 	</div>
   <div class="row">
-    <div class="col-sm tile histpho" onclick="location.href='google.co.uk';" style="cursor: pointer;">
+    <div class="col-sm tile histpho" onclick="location.href='Dali_then_now_photos.html';" style="cursor: pointer;">
 	  <h2 style="font-family: 'EB Garamond', serif;font-weight:bold;color:#575650;">Dali then and now: historical photography</h2>
 	  <img src="images/hist_photos_thumb.jpg" alt="Thumbnail of old and new photo" style="border: 2px solid #807f7a">
 	  <p style="color:#575650">A series of photographs taken by CP Fitzgerald and Joseph Rock in the early 1900s, and the same locations today taken by me.</p>
 	  </div>
-    <div class="col-sm tile timeline" onclick="location.href='yunnan_dali_china_history_timeline.html;" style="cursor: pointer;">
+    <div class="col-sm tile timeline" onclick="location.href='yunnan_dali_china_history_timeline.html';" style="cursor: pointer;">
       <h2 style="font-family: 'PT Sans Narrow', sans-serif;color:#aa1319;">An interactive timeline of Dali and Yunnan</h2>
 	  	  <img src="images/timeline_thumb.jpg" alt="Screenshot of timeline" style="border: 2px solid #aa1319">
 	  <p>A timeline exploring the fascinating and complex history of Dali and wider Yunnan province, from the 8th century to today.</p>
