--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@ background: none;
   <h5 class="h5">Myanmar Resists</h5>
 	  <p>An interactive map and image gallery celebrating the truly nationwide nature of the protests against the February 2021 coup in Myanmar.</p>
 	  <small class="notes">Raphael JS</small>
-	  	  <a href="linden_residency/Linden_center_artist_residency.html"><span class="link-box"></span></a>
+	  	  <a href="MyanmarResists/MR_index.html"><span class="link-box"></span></a>
       </div>
 
 	<div class="filterDiv photo hist prog">
