Contact just to Twitter

--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@ background: none;
 <div class="container-fluid">
   <div class="header">
   <h1>William Low</h1>
-  <p><a href="contact.html">Contact me</a></p> 
-  <p>Or find me on <a href="https://twitter.com/williamdlow">Twitter</a></p>
+  <!-- <p><a href="contact.html">Contact me</a></p>  -->
+  <p>Contact me on <a href="https://twitter.com/williamdlow">Twitter</a></p>
 </div></div>
     
   <div class="container-fluid">     
