--- a/MyanmarResists/MR_index.html
+++ b/MyanmarResists/MR_index.html
@@ -18,7 +18,8 @@
 
 	
 		<link rel="stylesheet" href="myanRes.css" />
-
+		
+		<link rel="icon" href="files/web_icon.png">
 
     </head>
     <body>
