--- a/MyanmarResists/MR_index.html
+++ b/MyanmarResists/MR_index.html
@@ -20,6 +20,12 @@
 		<link rel="stylesheet" href="myanRes.css" />
 		
 		<link rel="icon" href="files/web_icon.png">
+		
+		<meta name="twitter:card" content="summary" />
+<meta name="twitter:site" content="@williamlow" />
+<meta name="twitter:title" content="Myanmar Resists" />
+<meta name="twitter:description" content="District level protest photo map of Myanmar" />
+<meta name="twitter:image" content="../files/thumbs/thumb_myanRes.jpg" />
 
     </head>
     <body>
