--- a/MyanmarResists/MR_index.html
+++ b/MyanmarResists/MR_index.html
@@ -25,7 +25,7 @@
 <meta name="twitter:site" content="@williamlow" />
 <meta name="twitter:title" content="Myanmar Resists" />
 <meta name="twitter:description" content="District level photo map of the nationwide anti-coup protests" />
-<meta name="twitter:image" content="../files/thumbs/thumb_myanRes.jpg" />
+<meta name="twitter:image" content="images/thumb_myanRes.jpg" />
 
     </head>
     <body>
