--- a/MyanmarResists/MR_index.html
+++ b/MyanmarResists/MR_index.html
@@ -24,7 +24,7 @@
 		<meta name="twitter:card" content="summary" />
 <meta name="twitter:site" content="@williamlow" />
 <meta name="twitter:title" content="Myanmar Resists" />
-<meta name="twitter:description" content="District level photo map of the nationwide anti-coup protests" />
+<meta name="twitter:description" content="A district level photo map of the nationwide anti-coup protests" />
 <meta name="twitter:image" content="images/tCard_myanRes.jpg" />
 
     </head>
