--- a/MyanmarResists/MR_index.html
+++ b/MyanmarResists/MR_index.html
@@ -132,7 +132,9 @@
 		
 		
 		<div id="linkBox" style="display: none;">
-		<!-- This gets populated with hyperlinks to the image files. It allows the lightbox to treat them as a gallery -->
+		<!-- This gets populated with hyperlinks to the image files. It allows the lightbox to treat them as a gallery.
+			Also hid an image here as a backup for Twitter cards-->
+			<img src="images/tCard_myanRes.jpg">
 		</div>
 		
 		
