Fixing https on Dali and MR map size

--- a/MyanmarResists/MR_index.html
+++ b/MyanmarResists/MR_index.html
@@ -30,7 +30,7 @@
     </head>
     <body>
 	<div class="container">
-	<div class="row justify-content-center" style="height:93%;">
+	<div class="row justify-content-center mainCol">
 	
 		
 		<div class="col-lg-3 d-flex align-items-center justify-content-center">
