--- a/HKTT/en/About_Contact.html
+++ b/HKTT/en/About_Contact.html
@@ -60,7 +60,7 @@ margin: 20px 10%;
 			  <a href="top_20_images.html">Top 20 images</a>
 			  <a href="Who_is_HK_Man.html">Who is HK Man?</a>
 			  <a href="About_Contact.html" class="active">About and Contact</a>
-			  <a href="../ch/About_Contact.html">漢字<img class="lang_icon" src="../files/lang_HK_CH.png"></a>
+			  <!-- <a href="../ch/About_Contact.html">漢字<img class="lang_icon" src="../files/lang_HK_CH.png"></a> -->
 			  <a href="javascript:void(0);" class="icon" onclick="showNavMenu()">
 				<i class="fa fa-bars"></i>
 			  </a>
@@ -72,11 +72,11 @@ margin: 20px 10%;
 
 <h2><span style="color:var(--main-accent-color)">About</span></h2>
 
-<p>If you liked this site, you may also be interested in another project of mine, <a href="www.yangontimemachine.com">Yangon Time Machine</a>. It focuses on Yangon, in Myanmar (previously Rangoon and Burma), and also uses then and now photography. For that project I took the photos, and each is accompanied with an article on the history of the buildings photographed, and how they tie in to the story of the city and country.</p>
+<p>If you liked this site, you may also be interested in another project of mine, <a href="www.yangontimemachine.com">Yangon Time Machine</a>. It focuses on Yangon, in Myanmar (previously Rangoon and Burma), and also uses then and now photography. This website formed a prototype for the Yangon Time Machine site. For that project I took the photos, and each is accompanied with an article on the history of the buildings photographed, and how they tie in to the story of the city and country.</p>
 
 <p>Python was used to geocode and translate the Chinese titles HK Man gave each image, as well as extracting dates and placing them in appropriate formats. Leaflet JS powers the map.</p>
 
-<p>The icons used are from www.flaticon.com under a <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">creative commons</a> license. Author credit for these goes to <a href="https://www.flaticon.com/authors/dave-gandy" title="Dave Gandy">Dave Gandy</a>, Google and Twitter.</p>
+<!-- <p>The icons used are from www.flaticon.com under a <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">creative commons</a> license. Author credit for these goes to <a href="https://www.flaticon.com/authors/dave-gandy" title="Dave Gandy">Dave Gandy</a>, Google and Twitter.</p> -->
 
 <h2><span style="color:var(--main-accent-color)">Contact Me</span></h2>
 
