--- a/HKTT/en/HKTT_main.html
+++ b/HKTT/en/HKTT_main.html
@@ -82,7 +82,7 @@
 			  <a href="top_20_images.html">Top 20 images</a>
 			  <a href="Who_is_HK_Man.html">Who is HK Man?</a>
 			  <a href="About_Contact.html">About and Contact</a>
-			  <a href="../ch/HKTT_main.html">漢字<img class="lang_icon" src="../files/lang_HK_CH.png"></a>
+			  <!-- <a href="../ch/HKTT_main.html">漢字<img class="lang_icon" src="../files/lang_HK_CH.png"></a> -->
 			  <a href="javascript:void(0);" class="icon" onclick="showNavMenu()">
 				<i class="fa fa-bars"></i>
 			  </a>
@@ -93,7 +93,9 @@
 <section class="container">
   <div class="left-half">
   <!-- Trigger/Open The Modal -->
-		<div id="introText"><p>These photos were taken by an anonymous Flickr poster called <a href="https://www.flickr.com/photos/old-hk/" target="_blank">HK man</a>. From January 2007 to October 2011 he assembled more than 1000 then-and-now photographs of Hong Kong. His collection is notable for its size, and how well aligned the old and new photographs are. They provide an incredible record of architectural change in Hong Kong.</p><p>HK Man’s account is no longer in use, and efforts to contact him have failed. Changes to Flickr’s allowance means that some of these images will soon be lost. In response to this, and a fear that the collection could one day disappear altogether, they have been saved and uploaded here. </p><p>All images have been assigned a location from their title. Some will be incorrect, and many are missing dates for the original photographs. If you would like to correct a location or provide an estimated date for an image, a link is provided inside each map popup. </p><p>Finally, if anyone knows who HK Man is, please <a href="About_Contact.html">get in touch</a>. </p><p>To get started, click a marker or select one at random with the button below. </p></div>
+		<div id="introText">
+				<!-- <img src="../files/photos/上環 - 荷李活道 5770951003.jpg"> -->
+		<p>These photos were taken by an anonymous Flickr poster called <a href="https://www.flickr.com/photos/old-hk/" target="_blank">HK man</a>. From January 2007 to October 2011 he assembled more than 1000 then-and-now photographs of Hong Kong. His collection is notable for its size, and how well aligned the old and new photographs are. They provide an incredible record of architectural change in Hong Kong.</p><p>HK Man’s account is no longer in use, and efforts to contact him have failed. Changes to Flickr’s allowance means that some of these images have already been lost. In response to this, and a fear that the collection could one day disappear altogether, they have been saved and uploaded here. </p><p>All images have been automatically assigned a location based their title. Many will be incorrect. Dates are also missing for many of the older photographs. If you would like to correct a location or provide an estimated date for an image, a link is provided inside each map popup. </p><p>Finally, if anyone knows who HK Man is, please <a href="About_Contact.html">get in touch</a>. </p><p>To get started, click a marker or select one at random with the button below. </p></div>
   	    <div id="infobox" class="imagebox">Loading...</div>
   <div class="footer">
   		<button class='button hiddenbutton' id="prev" type="button">Previous</button>
