--- a/HKTT/en/Who_is_HK_Man.html
+++ b/HKTT/en/Who_is_HK_Man.html
@@ -38,7 +38,7 @@ margin: 20px 10%;
 			  <a href="top_20_images.html">Top 20 images</a>
 			  <a href="Who_is_HK_Man.html" class="active">Who is HK Man?</a>
 			  <a href="About_Contact.html">About and Contact</a>
-			  <a href="../ch/Who_is_HK_Man.html">漢字<img class="lang_icon" src="../files/lang_HK_CH.png"></a>
+			  <!-- <a href="../ch/Who_is_HK_Man.html">漢字<img class="lang_icon" src="../files/lang_HK_CH.png"></a> -->
 			  <a href="javascript:void(0);" class="icon" onclick="showNavMenu()">
 				<i class="fa fa-bars"></i>
 			  </a>
