--- a/HKTT/en/top_20_images.html
+++ b/HKTT/en/top_20_images.html
@@ -52,7 +52,7 @@ figure {
 			  <a href="top_20_images.html" class="active">Top 20 images</a>
 			  <a href="Who_is_HK_Man.html">Who is HK Man?</a>
 			  <a href="About_Contact.html">About and Contact</a>
-			  <a href="../ch/top_20_images.html">漢字<img class="lang_icon" src="../files/lang_HK_CH.png"></a>
+			  <!-- <a href="../ch/top_20_images.html">漢字<img class="lang_icon" src="../files/lang_HK_CH.png"></a> -->
 			  <a href="javascript:void(0);" class="icon" onclick="showNavMenu()">
 				<i class="fa fa-bars"></i>
 			  </a>
