New YTM, signpost plugin

--- a/index.html
+++ b/index.html
@@ -222,7 +222,20 @@ background: none;
 </div>
 
 <div class="container-fluid">
-
+  <div class="filterDiv photo hist prog">
+  <img src="files/thumbs/thumb_YTM2.jpg">
+  <h5 class="h5">Yangon Time Machine</h5>
+	  <p>Then-and-now photography of Yangon, accompanied by articles discussing the buildings shown in the images, and how their stories tie into that of the city. Custom built website.</p>
+	  <small class="notes">Photography, Research, Wordpress, OpenLayers</small>
+	  	  <a href="http://www.yangontimemachine.com"><span class="link-box"></span></a>
+  </div>
+	<div class="filterDiv prog map">
+  <img src="files/thumbs/thumb_signpost.jpg">
+  <h5 class="h5">Leaflet Signposts</h5>
+	  <p>A Leaflet.js plugin that displays arrows and a count of points found outside the current map view in each given direction. Link goes to GitHub repository; click through to demo from there.</p>
+	  <small class="notes">JS/CSS</small>
+	  	  <a href="https://github.com/williamlow/Leaflet.Signposts"><span class="link-box"></span></a>
+      </div>
 	<div class="filterDiv prog">
   <img src="files/thumbs/thumb_myanRes.jpg">
   <h5 class="h5">Myanmar Resists</h5>
@@ -280,13 +293,6 @@ background: none;
 	  <p>Using QGIS and remote sensing data to assess the impact of a proposed hydropower project on land cover.</p>
 	  <small class="notes">QGIS, SCP plugin, satellite imagery</small>
 	  	  <a href="LCA/land-cover-analysis.html"><span class="link-box"></span></a>
-  </div>
-  <div class="filterDiv photo hist">
-  <img src="files/thumbs/thumb_YTM.jpg">
-  <h5 class="h5">Yangon Time Machine</h5>
-	  <p>Then-and-now photography of Yangon, accompanied by articles discussing the buildings shown in the images, and how their stories tie into that of the city. Also includes some historical mapping.</p>
-	  <small class="notes">Photography, Research, Wordpress, OpenLayers</small>
-	  	  <a href="http://www.yangontimemachine.com"><span class="link-box"></span></a>
   </div>
    <div class="filterDiv photo">
   <img src="files/thumbs/thumb_YAR.jpg">
