--- a/leaflet-signpost/demo.html
+++ b/leaflet-signpost/demo.html
@@ -25,6 +25,7 @@ width: 550px;
 </style>
 
 </head>
+<body>
 <div id="map"></div>
 
 
@@ -43,7 +44,6 @@ var points = L.geoJSON(pointData).addTo(map);
 
 <!-- Signposts js -->
 <script src="src/leaflet.signposts.js" ></script>
-
 </body>
 </html>
 	
