--- a/leaflet-signpost/demo.html
+++ b/leaflet-signpost/demo.html
@@ -12,7 +12,7 @@
 <script src='https://unpkg.com/@turf/turf@6.3.0/turf.min.js'></script>
 
 <!-- Signposts css -->
-<link rel="stylesheet" href="src/leaflet.signposts.css" />
+<link rel="stylesheet" href="https://raw.githubusercontent.com/williamlow/Leaflet.Signposts/main/src/leaflet.signposts.css" />
 
 <!-- Point data: geojson loaded as variable 'pointData' -->
 <script src="pointData.js" ></script>
@@ -43,7 +43,7 @@ var points = L.geoJSON(pointData).addTo(map);
 </script>
 
 <!-- Signposts js -->
-<script src="src/leaflet.signposts.js" ></script>
+<script src="https://raw.githubusercontent.com/williamlow/Leaflet.Signposts/main/src/leaflet.signposts.js" ></script>
 </body>
 </html>
 	
