--- a/ABM/ABM_nigeria_update.html
+++ b/ABM/ABM_nigeria_update.html
@@ -119,12 +119,14 @@
 
 <p>Here we compare our predictions with trues values for the number of displaced people in locations at the end of the 100 day simulation period, based on <a href="https://dtm.iom.int/nigeria">IOM</a> and <a href="https://data.unhcr.org/en/situations/nigeriasituation">UNHCR</a> data. The graph below shows that over the six year period in which we performed simulations, accuracy is consistently high.</p>
 
+<p>It should however be noted that performance is boosted by the simplicity of the current geographic network, and the large number of displaced people who do not move during the course of the simulation. As the model develops further in complexity, we will seek to maintain this high performance threshold.</p>
+
 <img class="inline" src="images/Performance.png">
 <span class="caption">Model accuracy over a six year evaluation period</span>
 
 <h4>4.2 Location performance</h4>
 
-<p>If we evaluate performance at key locations, we see good performance in nearly all of them. Note that the simulations include both domestic camps within Nigeria and cross-border camps. We see no significant difference in accuracy between locations within Nigeria and across borders, suggesting that both types of displacement are sufficiently captured by the model.</p>
+<p>If we evaluate performance at key locations, we see good performance in nearly all of them. Note that the simulations include both domestic camps within Nigeria and cross-border camps. We see no significant difference in accuracy between locations within Nigeria and across borders, suggesting that at the current level of complexity, both types of displacement are sufficiently captured by the model.</p>
 
     <table>
       <tr>
