--- a/ABM/ABM_nigeria_update.html
+++ b/ABM/ABM_nigeria_update.html
@@ -81,8 +81,8 @@
 
 
  <ol>
-  <li>Five key IDP locations based on IOM data</li>
-  <li>Eight cross border locations in Cameroon, Chad and Niger, based on UNHCR data </li>
+  <li>Five key IDP locations based on <a href="https://dtm.iom.int/nigeria">IOM data</a></li>
+  <li>Eight cross border locations in Cameroon, Chad and Niger, based on <a href="https://data.unhcr.org/en/situations/nigeriasituation">UNHCR data</a></li>
   <li>Additional locations in Nigeria, chosen primarily for their contribution to establishing a travel network across the country. In the future the model can be expanded to include greater numbers of settlements and an even wider travel network.</li>
 </ol> 
 
