--- a/ABM/ABM_nigeria_update.html
+++ b/ABM/ABM_nigeria_update.html
@@ -225,7 +225,7 @@
 
 <h4>4.3 Disaggregation performance</h4>
 
-<p>Due to the lack of disaggregation in data on displaced populations, there is limited data available for us to validate our predictions on the age and sex of displaced populations. However some suitable data is available for some IOM locations inside Nigeria. The below table shows a minimal degree of error for both categories in these locations. This suggests the model is disaggregating predicted populations successfully, but requires further investigation – particularly for locations outside Nigeria.</p>
+<p>Due to the lack of disaggregation in data on displaced populations, there is limited data available for us to validate our predictions for age and sex. However some suitable data is available for some IOM locations inside Nigeria. The below table shows a minimal degree of error for both categories in these locations. This suggests the model is disaggregating predicted populations successfully, but requires further investigation – particularly for locations outside Nigeria.</p>
 
 <table>
       <tr>
@@ -235,27 +235,27 @@
 
       </tr>
       <tr>
-        <th scope="row">Minawao</th>
+        <th scope="row">Daware</th>
         <td>5.6%</td>
         <td>7.7%</td>
       </tr>
       <tr>
-        <th scope="row">Logone et Chari</th>
+        <th scope="row">ISC</th>
         <td>2.5%</td>
         <td>1%</td>
       </tr>
       <tr>
-        <th scope="row">Mayo Sava</th>
+        <th scope="row">Fufore</th>
         <td>0.5%</td>
         <td>2.4%</td>
       </tr>
       <tr>
-        <th scope="row">Mayo Tsanaga</th>
+        <th scope="row">Kasaisa</th>
         <td>4.2%</td>
         <td>6.1%</td>
       </tr>
 	        <tr>
-        <th scope="row">Diffa</th>
+        <th scope="row">Monguno</th>
         <td>0.5%</td>
         <td>0.9%</td>
       </tr>
